--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 some file is needed here, therefore making unempty
 foobar
 more foobar to test the git plugin
+more foobar stuff to fire git plugin
