more foobar for tag4

--- a/README
+++ b/README
@@ -2,3 +2,4 @@ some file is needed here, therefore making unempty
 foobar
 more foobar to test the git plugin
 more foobar stuff to fire git plugin
+more foobar to see if jenkins-ci-jenkins-4 is applied
