--- a/README
+++ b/README
@@ -1,7 +1,1 @@
-some file is needed here, therefore making unempty
-foobar
-more foobar to test the git plugin
-more foobar stuff to fire git plugin
-more foobar to see if jenkins-ci-jenkins-4 is applied
-AGAIN, more foobar to see if jenkins-ci-jenkins-4 is applied
-lets try jenkins tag number 5
+dfjkdfjfd
